org_unpackaged/standard/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Referring_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifies what contact led us to this contact</description>
        <inlineHelpText>Any record under &quot;Contacts&quot; in the Salesforce system that has referred this contact</inlineHelpText>
        <label>Referring Associate</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.IsPersonAccount</field>
                <operation>equals</operation>
                <value>true</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Referred contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requires_something_they_can_t_get__c</fullName>
        <inlineHelpText>i.e. Security Clearance, Large Professional Liability Policy, Extensive Business History, Compliance with Fed. Government</inlineHelpText>
        <label>Client Requires Difficult Item to Obtain</label>
        <picklist>
            <picklistValues>
                <fullName>True</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>False</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Secondary_Email__c</fullName>
        <description>A second email field</description>
        <inlineHelpText>Secondary email</inlineHelpText>
        <label>Secondary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Secondary_Phone__c</fullName>
        <description>Allows users to store this record&apos;s secondary phone number</description>
        <inlineHelpText>Please enter this record&apos;s secondary phone number</inlineHelpText>
        <label>Secondary Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Sells_Services_to_Large_Businesses__c</fullName>
        <inlineHelpText>Fortune 500 and above</inlineHelpText>
        <label>Sells Services to Large Businesses</label>
        <picklist>
            <picklistValues>
                <fullName>True</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>False</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Status__c</fullName>
        <label>Sub Status</label>
        <picklist>
            <controllingField>Contact_Status__c</controllingField>
            <picklistValues>
                <fullName>Unidentified Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Qualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Could Not Sell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Starting &gt; 30 Days</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TeamLeader__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Team Leader</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>US_Based__c</fullName>
        <label>US Based</label>
        <picklist>
            <picklistValues>
                <fullName>True</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>False</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Upcoming_Signing_Opportunity__c</fullName>
        <label>Upcoming Signing Opportunity</label>
        <picklist>
            <picklistValues>
                <fullName>True</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>False</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Webinar_Registration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Webinar Registration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X6_Years_of_Experience__c</fullName>
        <label>6+ Years of Experience</label>
        <picklist>
            <picklistValues>
                <fullName>True</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>False</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X75_hr_Bill_Rate__c</fullName>
        <label>$75/hr+ Bill Rate</label>
        <picklist>
            <picklistValues>
                <fullName>True</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>False</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fb_MBO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MBO Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fb_alumniOutreach__c</fullName>
        <label>Alumni Outreach</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Override Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Override Exclude</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fb_associateNewsletter__c</fullName>
        <label>MBO Newsletter</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Override Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Override Exclude</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fb_consultantBrief__c</fullName>
        <label>Consultant Brief</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Override Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Override Exclude</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fb_consultantNurturing__c</fullName>
        <label>Consultant Nurturing</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Override Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Override Exclude</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fb_eduAndResearch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Education and Research</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fb_enterpriseConferences__c</fullName>
        <label>Enterprise Conferences</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Override Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Override Exclude</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fb_enterpriseNews__c</fullName>
        <label>Enterprise News</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Override Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Override Exclude</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fb_enterpriseNurturing__c</fullName>
        <label>Enterprise Nurturing</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Override Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Override Exclude</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fb_enterpriseWebinars__c</fullName>
        <label>Enterprise Webinars</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Override Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Override Exclude</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fb_networkingEvents__c</fullName>
        <label>Networking Events</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Override Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Override Exclude</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fb_nlAndEvents__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Newsletters and Events</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fb_otherEAR__c</fullName>
        <label>Other Education and Research</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Override Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Override Exclude</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fb_otherEvents__c</fullName>
        <label>Other Events</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Override Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Override Exclude</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fb_otherGeneral__c</fullName>
        <label>Other General</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Override Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Override Exclude</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fb_otherPromo__c</fullName>
        <label>Other Promotions</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Override Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Override Exclude</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fb_pANews__c</fullName>
        <label>Press Announcements/News</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Override Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Override Exclude</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fb_pracOwn__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Practice Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fb_referralProgram__c</fullName>
        <label>Referral Program</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Override Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Override Exclude</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fb_soi__c</fullName>
        <label>State of Independence</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Override Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Override Include</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fb_tipsAndFeatures__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tips and Features About MBO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fb_webinarSeries__c</fullName>
        <label>Webinar Series</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Override Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Override Exclude</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fd_bcStatusChange__c</fullName>
        <label>Associate Status Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fd_birthdate__c</fullName>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fd_mboCreate__c</fullName>
        <label>MBO Create Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fd_statusChange__c</fullName>
        <label>Contact Status Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fd_terminationDate__c</fullName>
        <label>Term Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fn_associateStatusAge__c</fullName>
        <formula>IF(
     ISNULL(fd_bcStatusChange__c),
     TODAY() -   DATEVALUE(CreatedDate),
     TODAY() - fd_bcStatusChange__c
     )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Associate Status Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fn_contactStatusAge__c</fullName>
        <formula>IF(
   NOT(
       ISBLANK(fd_statusChange__c)
   ),
   TODAY() - fd_statusChange__c,
   TODAY() - DATEVALUE(CreatedDate)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Status Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fn_daysUntilBirthdate__c</fullName>
        <formula>if(
   Month(fd_birthdate__c)&lt;=Month(Datevalue(NOW())),
   if( 
      Month(Birthdate)&lt;Month(Datevalue(NOW())),
      DATE(
           YEAR(DATEVALUE(NOW()))+1,
           MONTH(Birthdate),
           DAY(Birthdate)
           ),
      if(
         Day(Birthdate)&lt;Day(Datevalue(NOW())),
         DATE(
              YEAR(DATEVALUE(NOW())) + 1,
              MONTH(Birthdate),
              DAY(Birthdate)
              ),
         DATE(
              YEAR(DATEVALUE(NOW())),
              MONTH(Birthdate),
              DAY(Birthdate)
              )
         )
      ),
   DATE(
        YEAR(DATEVALUE(NOW())),
        MONTH(Birthdate),
        DAY(Birthdate)
        )
   ) - TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Until Birthday</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fs_aDGUID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Active Directory GUID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>fs_assocCoName__c</fullName>
        <label>Associate&apos;s Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fs_bMLNameClean__c</fullName>
        <formula>SUBSTITUTE(Business_Manager__r.Last_Name__c, &quot;&apos;&quot;, &quot;&quot; )</formula>
        <label>BM LName Clean</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fs_bmPhone__c</fullName>
        <formula>Business_Manager__r.fs_phone__c</formula>
        <label>BM Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fs_contactPref__c</fullName>
        <label>Contact Preference</label>
        <picklist>
            <picklistValues>
                <fullName>Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fs_contactType__c</fullName>
        <inlineHelpText>Select Invoiceable if you need the contact in the MBO System for approval, invoice, or other MBO System tasks.</inlineHelpText>
        <label>Contact Type</label>
        <picklist>
            <picklistValues>
                <fullName>Invoiceable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-invoiceable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fs_direct__c</fullName>
        <label>Associate Type</label>
        <picklist>
            <picklistValues>
                <fullName>Broker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corp-Associate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exec-Associate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expense Only Resource</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Practice Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready-To-Serve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staff-Associate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Time and Expense Only</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fs_eMLNameClean__c</fullName>
        <formula>SUBSTITUTE( Enrollment_Manager__r.Last_Name__c, &quot;&apos;&quot;, &quot;&quot;)</formula>
        <label>EM LName Clean</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fs_emPhone__c</fullName>
        <formula>Enrollment_Manager__r.fs_phone__c</formula>
        <label>EM Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fs_facebook__c</fullName>
        <label>Facebook</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>fs_gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fs_industryExpertiseWMID__c</fullName>
        <label>Industry Expertise WMID</label>
        <picklist>
            <picklistValues>
                <fullName>1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1022</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1033</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1036</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1044</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1045</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1049</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1051</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1052</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1053</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1054</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1055</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1056</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1057</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1058</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1059</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1060</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1062</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>fs_industryExpertise__c</fullName>
        <label>Industry Expertise</label>
        <picklist>
            <picklistValues>
                <fullName>Aerospace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agriculture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apparel &amp; Accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architectural and Design Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biotechnology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broadcasting, Music, &amp; Film</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Packaged Goods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defense</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy &amp; Utilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment &amp; Leisure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gaming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government &amp; Military</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare Information Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospitality &amp; Leisure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Technology Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>fs_linkedin__c</fullName>
        <label>LinkedIn</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>fs_marital__c</fullName>
        <label>Marital Status</label>
        <picklist>
            <picklistValues>
                <fullName>Single</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Married</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Widowed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Divorced</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fs_operationPlan__c</fullName>
        <label>Operation Plan</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard - Foreign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank Account Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Debit Funding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sponsored Staff - Hourly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payroll - Hourly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sponsored Staff - Fixed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payroll - Fixed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard - Sponsored</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic Billing Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Associate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broker Fee Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Staff</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fs_overview__c</fullName>
        <label>Overview</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>fs_owner__c</fullName>
        <formula>IF(
   OR(
      ISBLANK(Account.Account_Manager__r.Salesforce_User__c),
      ISBLANK(Account.Account_Manager__c)
   ),
   &quot;00580000003Xfjx&quot;,
   Account.Account_Manager__r.Salesforce_User__c
)</formula>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fs_pPhoneType__c</fullName>
        <label>Primary Phone Type</label>
        <picklist>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fs_persona__c</fullName>
        <label>Persona</label>
        <picklist>
            <picklistValues>
                <fullName>Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commissioned Professionals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freelancer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small Business</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>